--- a/Self-storage companies in the UK/All Self Storage Companies in the UK.ipynb
+++ b/Self-storage companies in the UK/All Self Storage Companies in the UK.ipynb
@@ -256,7 +256,7 @@
    "outputs": [],
    "source": [
     "# Exports `companies_links` DataFrame to Excel file named Companies Links\n",
-    "companies_links.to_excel(r'C:\\Users\\user\\Documents\\Docs\\Tech\\Remote Work\\Upwork\\Python Tools\\Companies Links.xlsx', index = False)"
+    "companies_links.to_excel('./Companies Links.xlsx', index = False)"
    ]
   },
   {
@@ -1315,7 +1315,7 @@
    "outputs": [],
    "source": [
     "# Exports `companies_links` DataFrame to Excel file named Companies Links\n",
-    "all_self_storage_companies_UK.to_excel(r'C:\\Users\\user\\Documents\\Docs\\Tech\\Remote Work\\Upwork\\Python Tools\\All Self Storage Companies in the UK.xlsx', index = False)"
+    "all_self_storage_companies_UK.to_excel('.\\All Self Storage Companies in the UK.xlsx', index = False)"
    ]
   },
   {
@@ -1324,7 +1324,7 @@
    "metadata": {},
    "source": [
     "### Remarks:\n",
-    "* In this project involved: Web Crawling, Web Scraping, Data cleaning, Python, Programming, Pandas, NumPy, Beautiful soup, Selenium, Jupyter notebook, Chrome\n",
+    "* This project involved: Web Crawling, Web Scraping, Data cleaning, Python, Programming, Pandas, NumPy, Beautiful soup, Selenium, Jupyter notebook, Chrome\n",
     "\n",
     "* Project was **_successfuly completed & delivered_** on **_21st August, 2021_**\n",
     "\n",
@@ -1348,7 +1348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
